<resources>
    <string name="app_name">Alerty</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="m_s_opciones">MÁS OPCIONES</string>
    <string name="introduce_tu_nombre">Introduce tu nombre de usuario</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_una_cuenta_n_registrate">¿No tienes una cuenta? \n Regístrate</string>
    <string name="volver_al_inicio_de_sesi_n">Volver al inicio de sesión</string>
    <string name="introduce_tu_correo">Introduce tu Correo</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenido_a_alertly">Bienvenido a Alertly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_adir_incidencia">Añadir Incidencia</string>
    <string name="default_web_client_id">114242175846-irsqsvvrkrnj97sf5nt2mso1oive23r2.apps.googleusercontent.com</string>
    <string name="confirma_la_contrasenia">Confirma la contraseña</string>
    <string name="registro_error_registro">El correo ya existe</string>
    <string name="titulo">Título</string>
    <string name="escribe_un_t_tulo_para_la_incidencia">Escribe un título para la incidencia</string>
    <string name="descripci_n">Descripción</string>
    <string name="guardar">Guardar</string>
    <string name="fragment_creacion_no_hay_titulo">Es necesario que añadas un título a la incidencia</string>
    <string name="fragment_creacion_no_hay_descripcion">Se debe añadir una descripción a la incidencia</string>
    <string name="fragment_creacion_no_hay_imagen">Introduce una imagen para crear la incidencia</string>
    <string name="fragment_creacion_incidencia_registrada_exito">Incidencia registrada con éxito</string>
    <string name="fragment_creacion_incidencia_fallo">Error al guardar la incidencia en el sistema</string>
    <string name="bottm_nav_menu_nueva_incidencia">Crear Incidencia</string>
    <string name="bottm_nav_menu_perfil">Perfil</string>
    <string name="fragment_detail_eliminar_incidencia">Eliminar Incidencia</string>
    <string name="fragmento_inicio_titulo">Incidencias</string>
    <string name="fragmento_creacion_titulo">Crear Incidencia</string>
    <string name="nombre">Nombre</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="introduce_n_mero_de_tel_fono">Introduce número de teléfono</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="introduce_piso_y_letra">Introduce el piso y letra</string>
    <string name="piso_y_letra">Piso y letra</string>
    <string name="introduce_tus_apellidos">Introduce tus apellidos</string>
    <string name="apellidos">Apellidos</string>
    <string name="ya_casi_estas_rellena_el_formulario_de_registro_n_para_entrar_a_la_app">Ya casi estás, rellena el formulario de registro \n para entrar a la App</string>
    <string name="fragment_incidencias_confirmacion_eliminar">Confirmación eliminar</string>
    <string name="fragment_incidencias_mensaje_eliminar">¿Estás seguro de eliminar la incidencia?</string>
    <string name="fragment_incidencias_confirmacion">Sí</string>
    <string name="fragment_incidencias_incidencia_eliminada">Incidencia eliminada</string>
    <string name="fragment_incidencias_fallo_eliminacion">Error al eliminar la incidencia</string>
    <string name="fragment_incidencias_incidencia_rechazo">No</string>
    <string name="detail_incidencia_fragment_sin_revisar">Sin revisar</string>
    <string name="detail_incidencia_fragment_en_revision">En revisión</string>
    <string name="detail_incidencia_fragment_completado">Completado</string>
    <string name="fragment_detail_modificar_incidencia">Modificar Incidencia</string>
    <string name="fragment_inicio_sin_incidencias">No hay incidencias registradas</string>
    <string name="inicio_adapter_error_eliminar">Ha ocurrido un error al borrar la incidencia</string>
    <string name="inicio_adapter_exito_eliminar">Incidencia eliminada con éxito</string>
    <string name="inicio_adapter_titulo_alerta">Confirmar Eliminar</string>
    <string name="inicio_adapter_mensaje_alerta">¿Estás seguro de eliminar la incidencia?</string>
    <string name="inicio_adapter_confirmacion">Sí</string>
    <string name="inicio_adapter_denegacion">No</string>
    <string name="detail_incidencia_titulo_alert">Confirmación Modificar</string>
    <string name="detail_incidencia_texto_alert">¿Guardar cambios?</string>
    <string name="detail_incidencia_error_modificar">Ha ocurrido un error al guardar los cambios</string>
    <string name="detail_incidencia_exito_modificar">Se han guardado los cambios</string>
    <string name="inicio_adapter_compartir_incidencia">¡Hay un problema en la comunidad!\nDescripción: \"%s\"\n</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="fragment_perfil_piso">Piso:</string>
    <string name="fragment_perfil_telefono">Teléfono:</string>
    <string name="fragment_incidencia_rol">Rol:</string>
    <string name="form_user_introduce_tu_nombre">Introduce tu nombre</string>
</resources>