<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.creacion.FragmentCreacion"
    android:background="#41C7F4AD"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvCreacionTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragmento_creacion_titulo"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textAlignment="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        android:layout_marginTop="43dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFC8C"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCreacionTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_rounded"
                android:textColor="@color/black"
                android:hint="@string/escribe_un_t_tulo_para_la_incidencia"
                android:padding="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/descripci_n"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreacionDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_rounded"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:maxLines="8"
                    android:minLines="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/imgAddIncidencia"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/edittext_rounded"
                android:src="@drawable/baseline_image_24"
                app:strokeColor="@color/black" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFC107"
                android:text="@string/guardar" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>